fixes broken css

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -14,7 +14,7 @@
 		flex: 0 0 100%;
 		@media #{$tablet}
 		{
-		  flex: 0 0 50%;
+			flex: 0 0 50%;
 		}
 	}
 	.type{
@@ -81,11 +81,11 @@
 	h1, h2{
 		margin-top: 0px;
 		margin-bottom: 0px;
-	.type, .artist-event{
-		flex: 1 0 100%;
+		.type, .artist-event{
+			flex: 1 0 100%;
+		}
 	}
 }
-
 // INDEX
 #single-events-list{
 	min-height: 800px;
